--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 
         <!-- hero image section start -->
         <section class="hero">
-            <div>
-                <img src=""    alt="Marina Kaeufer profile picture">
-            </div>
+
             <div class="quote">
                 <blockquote>
                     <p id="quote-text">
@@ -56,7 +54,7 @@
                 <p>
                     Highly organized, detailed and self-motivated professional with experience in C-Suite Support, Project Management, audit, store organization and customer service.
                     <br><br>
-                    To be added...
+                    On the path to change career, taking University of Richmond Coding Boot Camp course. 
             </div>
         </section>
         
