added team poject to "My Work"/updated html/css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <div class = "projects-grid-wrapper">
                 <div class="projects-grid">
 
+
                     <a href="https://marinakaeufer.github.io/Challenge-1-Horiseon-refactor/" target="_blank" class="project horiseonrefactor">
                         <div class="project-label">
                             <h3>Horiseon Refactor</h3>
@@ -72,13 +73,18 @@
                         </div>
                     </a>
                 </a>
-                <a href="#" target="_blank"  class="project project2">
+
+
+
+                <a href="https://bethanyjean.github.io/camp-smoothie/" target="_blank"  class="project frontend">
                     <div class="project-label">
-                        <h3>Project 2</h3>
-                        <p>Placeholder</p>
+                        <h3>Interactive Front-End Project</h3>
+                        <p>Team Project</p>
                     </div>
                 </a>
             </a>
+
+            
             <a href="#" target="_blank"  class="project project3">
                 <div class="project-label">
                     <h3>Project 3</h3>
