--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
         
 
-        <!-- my work section start test --> 
+        <!-- my work section start --> 
         <section id="my-work" class="my-work">
             <div class="title"><h2>My Work</h2></div>
             <div class = "projects-grid-wrapper">
