added Full Stack project

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             </a>
 
 
-            <a href="#" target="_blank"  class="project project3">
+            <a href="https://serene-beyond-42809.herokuapp.com" target="_blank"  class="project project3">
                 <div class="project-label">
-                    <h3>Project 3</h3>
-                    <p>Placeholder</p>
+                    <h3>Interactive Full-Stack Project</h3>
+                    <p>Team Project</p>
                 </div>
             </a>
         </a>
