--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 </div>
             </a>
         </a>
-        <a href="#" target="_blank"  class="project project4">
+        <a href="https://marinamoviefinder.herokuapp.com/" target="_blank"  class="project project4">
             <div class="project-label">
-                <h3>Project 4</h3>
-                <p>Placeholder</p>
+                <h3>Interactive MERN SPA Project</h3>
+                <p>Individual Project</p>
             </div>
         </a>
 
